@startuml
' RentalApp — Component Diagram
' Generated from the repo structure (May 2026)

title RentalApp — Component Diagram (Current)
left to right direction

skinparam componentStyle rectangle
skinparam packageStyle rectangle
skinparam shadowing false

' Avoid accidental ID collisions
skinparam defaultTextAlignment left

' ===== Solution / Projects ==================================================
package "RentalApp (MAUI Client)" as Maui {
  package "UI" as MauiUI {
    component "Views\n(XAML Pages)" as Views
    component "Converters" as Converters
  }

  package "Presentation" as MauiPresentation {
    component "ViewModels\n(MVVM)" as ViewModels
  }

  package "Services (Interfaces)" as MauiSvcIf {
    interface "IAuthenticationService" as IAuth
    interface "INavigationService" as INav
    interface "ILocationService" as ILoc
    interface "IRentalService" as IRentalSvc
    interface "IReviewService" as IReviewSvc
    interface "ITokenStorage" as ITokenStorage
  }

  package "Services (Implementations)" as MauiSvcImpl {
    component "ApiAuthenticationService" as ApiAuth
    component "AuthenticationService\n(local DB)" as DbAuth

    component "NavigationService" as NavSvc
    component "LocationService" as LocSvc
    component "RentalService" as RentalSvc
    component "ReviewService" as ReviewSvc

    component "SecureStorageTokenStorage" as SecureTokenStorage
    component "AuthDelegatingHandler" as AuthHandler
    component "CurrentUserProvider" as CurrentUserProvider
  }

  component "HttpClient\n(hosted API base)" as HttpClient
  component "MAUI Platform APIs\n(SecureStorage, Geolocation, Maps)" as Platform
}

package "RentalApp.Database (Class Library)" as DatabaseLib {
  package "Models" as DbModelsPkg {
    component "Domain Models\n(User, Category, Item, Rental, Review)" as DomainModels
  }

  package "Queries" as DbQueriesPkg {
    component "Query DTOs\n(ItemQuery, RentalQuery, …)" as QueryDtos
  }

  package "Services" as DbServices {
    interface "ICurrentUserProvider" as ICurrentUserProvider
  }

  package "Repositories (Interfaces)" as RepoIf {
    interface "ICategoryRepository" as ICategoryRepository
    interface "IItemRepository" as IItemRepository
    interface "IRentalRepository" as IRentalRepository
    interface "IReviewRepository" as IReviewRepository
    interface "IRepository<T>" as IRepositoryT
  }

  package "Repositories.Api" as RepoApi {
    component "ApiCategoryRepository" as ApiCategoryRepository
    component "ApiItemRepository" as ApiItemRepository
    component "ApiRentalRepository" as ApiRentalRepository
    component "ApiReviewRepository" as ApiReviewRepository
  }

  package "Repositories.Db" as RepoDb {
    component "DbCategoryRepository" as DbCategoryRepository
    component "DbItemRepository" as DbItemRepository
    component "DbRentalRepository" as DbRentalRepository
    component "DbReviewRepository" as DbReviewRepository
  }

  component "IDbContextFactory<AppDbContext>" as DbContextFactory
  component "AppDbContext\n(EF Core)" as AppDbContext
  database "PostgreSQL" as Postgres
}

package "Tooling" as Tooling {
  component "RentalApp.Migrations\n(EF migrations runner)" as Migrations
  component "RentalApp.Tests\n(xUnit)" as Tests
}

cloud "Hosted API\nhttps://set09102-api.b-davison.workers.dev" as HostedApi

' ===== Intra-project relationships =========================================
Views --> ViewModels : data binding / commands
Views --> Converters
Views --> Platform : Maps

' ViewModels depend on interfaces
ViewModels ..> IAuth
ViewModels ..> INav
ViewModels ..> ILoc
ViewModels ..> IRentalSvc
ViewModels ..> IReviewSvc

ViewModels ..> ICategoryRepository
ViewModels ..> IItemRepository
ViewModels ..> IRentalRepository
ViewModels ..> IReviewRepository

' Interfaces -> implementations
IAuth <|.. ApiAuth
IAuth <|.. DbAuth
INav <|.. NavSvc
ILoc <|.. LocSvc
IRentalSvc <|.. RentalSvc
IReviewSvc <|.. ReviewSvc
ITokenStorage <|.. SecureTokenStorage

' Auth / HTTP pipeline
HttpClient --> AuthHandler
AuthHandler --> ITokenStorage
SecureTokenStorage --> Platform : SecureStorage

ApiAuth --> HttpClient : /auth/*, /users/me
ApiAuth --> ITokenStorage
ApiAuth --> AuthHandler : subscribes to 401 event

' Local-DB auth
DbAuth --> DbContextFactory

' Location service
LocSvc --> Platform : Geolocation
LocSvc --> IItemRepository

' Domain services
RentalSvc --> IRentalRepository
ReviewSvc --> IReviewRepository

' ===== Repository implementations ==========================================
ICategoryRepository -|> IRepositoryT
IItemRepository -|> IRepositoryT
IRentalRepository -|> IRepositoryT
IReviewRepository -|> IRepositoryT

ICategoryRepository <|.. ApiCategoryRepository
IItemRepository <|.. ApiItemRepository
IRentalRepository <|.. ApiRentalRepository
IReviewRepository <|.. ApiReviewRepository

ApiCategoryRepository --> HttpClient
ApiItemRepository --> HttpClient
ApiRentalRepository --> HttpClient
ApiReviewRepository --> HttpClient
HttpClient --> HostedApi

ICategoryRepository <|.. DbCategoryRepository
IItemRepository <|.. DbItemRepository
IRentalRepository <|.. DbRentalRepository
IReviewRepository <|.. DbReviewRepository

DbCategoryRepository --> DbContextFactory
DbItemRepository --> DbContextFactory
DbRentalRepository --> DbContextFactory
DbReviewRepository --> DbContextFactory

DbItemRepository --> ICurrentUserProvider
DbRentalRepository --> ICurrentUserProvider
DbReviewRepository --> ICurrentUserProvider

DbContextFactory --> AppDbContext
AppDbContext --> Postgres

' Adapter to avoid circular dependency (RentalApp.Database <-/-> RentalApp)
ICurrentUserProvider <|.. CurrentUserProvider
CurrentUserProvider ..> IAuth

' ===== Tooling =============================================================
Migrations --> AppDbContext : design-time EF migrations

Tests ..> ViewModels
Tests ..> MauiSvcImpl
Tests ..> RepoApi
Tests ..> RepoDb

note right of Maui
Data-source switch (see MauiProgram.cs):

- useSharedApi = true
  ViewModels/Services -> Api* Repositories -> Hosted API

- useSharedApi = false
  ViewModels/Services -> Db* Repositories -> AppDbContext -> PostgreSQL
end note

note right of DatabaseLib
Local DB mode uses IDbContextFactory<AppDbContext> so repositories
can be singletons without sharing DbContext instances.
end note

@enduml
